ops/graph-node/kustomize/overlays/aws/thanos-sepolia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graph-node-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: thanos-sepolia
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=s3-alb-access-logs-lambda-thanos-sepolia,access_logs.s3.prefix=thanos-sepolia
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-northeast-2:992382494724:regional/webacl/thanos-sepolia-block-ddos/3a0498c3-896f-49f5-908b-b9ba3fb88d0f
    alb.ingress.kubernetes.io/conditions.auth: >
      [
        {
          "field": "http-header",
          "httpHeaderConfig": {
            "httpHeaderName": "Authorization",
            "values": ["Bearer <GRAPH_NODE_BEARER_TOKEN>"]
          }
        }
      ]
    alb.ingress.kubernetes.io/actions.auth: >
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [
            {
              "serviceName": "graph-node-svc",
              "servicePort": "8020"
            }
          ]
        }
      }
    alb.ingress.kubernetes.io/conditions.ws-rule: >
      [
        {
          "field": "http-header",
          "httpHeaderConfig": {
              "httpHeaderName": "Upgrade",
              "values": ["websocket"]
          }
        },
        {
          "field": "http-header",
          "httpHeaderConfig": {
            "httpHeaderName": "Connection",
            "values": ["Upgrade"]
          }
        }
      ]
    alb.ingress.kubernetes.io/actions.ws-rule: >
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [{
            "serviceName": "graph-node-svc",
            "servicePort": "8001"
          }]
        }
      }
spec:
  tls:
    - hosts:
        - graph-node.thanos-sepolia.tokamak.network
  rules:
    - host: graph-node.thanos-sepolia.tokamak.network
      http:
        paths:
          - path: /deploy
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  name: use-annotation
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: graph-node-svc
                port:
                  number: 8040
          - path: /subgraphs
            pathType: Prefix
            backend:
              service:
                name: ws-rule
                port:
                  name: use-annotation
          - path: /subgraphs
            pathType: Prefix
            backend:
              service:
                name: graph-node-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graph-node-svc
                port:
                  number: 8030

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipfs-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: thanos-sepolia
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=s3-alb-access-logs-lambda-thanos-sepolia,access_logs.s3.prefix=thanos-sepolia
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-northeast-2:992382494724:regional/webacl/thanos-sepolia-block-ddos/3a0498c3-896f-49f5-908b-b9ba3fb88d0f
    alb.ingress.kubernetes.io/conditions.auth: >
      [
        {
          "field": "http-header",
          "httpHeaderConfig": {
            "httpHeaderName": "Authorization",
            "values": ["Bearer <GRAPH_NODE_BEARER_TOKEN>"]
          }
        }
      ]
    alb.ingress.kubernetes.io/actions.auth: >
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [
            {
              "serviceName": "ipfs-svc",
              "servicePort": "5001"
            }
          ]
        }
      }
spec:
  tls:
    - hosts:
        - ipfs.thanos-sepolia.tokamak.network
  rules:
    - host: ipfs.thanos-sepolia.tokamak.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  name: use-annotation
